[gd_scene load_steps=3 format=3 uid="uid://bseeqsaqhnmwk"]

[ext_resource type="Script" path="res://scripts/ui/WaitingCarsMenu.gd" id="1"]

[node name="WaitingCarsMenu" type="Control"]
script = ExtResource( 1 )
anchor_right = 0.3
anchor_bottom = 0.3
margin_left = 8.0
margin_top = 8.0
margin_right = 308.0
margin_bottom = 208.0

[node name="Panel" type="Panel" parent="."]
margin_left = 0.0
margin_top = 0.0
margin_right = 300.0
margin_bottom = 200.0

[node name="Panel/VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 8.0
margin_top = 8.0

[node name="Panel/VBoxContainer/SlotsLabel" type="Label" parent="Panel/VBoxContainer"]
text = "Slots disponibles : 2 / 2"

[node name="Panel/VBoxContainer/WaitingLabel" type="Label" parent="Panel/VBoxContainer"]
text = "Voitures en attente : 0"

[node name="Panel/VBoxContainer/CarSelect" type="OptionButton" parent="Panel/VBoxContainer"]

[node name="Panel/VBoxContainer/SpawnButton" type="Button" parent="Panel/VBoxContainer"]
text = "Spawner la voiture"

[node name="RefreshTimer" type="Timer" parent="."]
one = false

